Fix too big margins when sizing down
Margins in top section had been fixed with pixel size. When changing the screen size they were too big in the proportion to the content. Changed the width of the divs to size down with the screen.

--- a/style.css
+++ b/style.css
@@ -22,13 +22,17 @@ body{
 .top{
     background-color: #1F2937;
     color: #E5E7EB;
-    padding: 16px 200px;
+    padding: 16px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header{
     display:flex;
     gap:16px;
     align-items: center;
+    width: 70vw;
 }
 
 .header p{
@@ -55,6 +59,7 @@ h1{
     margin: 100px 0;
     flex-wrap: wrap;
     gap: 48px;
+    width: 70vw;
 }
 
 .description-text{
@@ -108,6 +113,7 @@ button{
     justify-content: center;
     flex-wrap: wrap;
     gap:48px;
+    margin: 0 16px;
 }
 
 .card{
